# sigmoid_model_experiments

./: AGENTS.md  pyproject.toml  requirements-dev.txt
notebooks/gmm_demo/: gmm_demo.ipynb
notebooks/naive_bayes_demo/: naive_bayes_demo.ipynb
notebooks/random_forest_demo/: random_forest_demo.ipynb
notebooks/svm_demo/: svm_demo.ipynb
src/naive_bayes_demo/: __init__.py  data.py  evaluate.py  model.py  train.py
src/random_forest_demo/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
src/svm_demo/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
tests/naive_bayes_demo/: test_model.py
tests/random_forest_demo/: test_model.py
tests/svm_demo/: test_model.py
